PyMaker/datas/object2/RawHTML/i15401/Python_DOC_referPages.a-leading-0-bug-in-dataframe.txt
<div class="post-text" itemprop="text">
<p>It seems that a leading 0 in a number causes error in dataframes. Can anybody replicate?</p>
<pre><code>In [45]: df = pd.DataFrame({'hhmm': [930,1000,1300]})
In [46]: df = pd.DataFrame({'hhmm': [0930,1000,1300]})
  File "&lt;ipython-input-46-3a3038c84b16&gt;", line 1
    df = pd.DataFrame({'hhmm': [0930,1000,1300]})
                                   ^
SyntaxError: invalid token
In [47]: 
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>A leading zero causes a number to be interpreted as octal. <code>9</code> is not a valid octal digit, hence the error.</p>
<p>Note that <a href="https://docs.python.org/3/reference/lexical_analysis.html#integer-literals">in Python 3, octal literals (numbers with leading 0s) are flat-out disallowed</a> to avoid confusion with bases and such. Instead, <code>0o</code> must be used instead for octal literals.</p>
</div>
<span class="comment-copy">umm not sure this is relevant, but leading zero typically means it's an octal literal.</span>
<span class="comment-copy">Actually IIRC python does not support octals, to avoid this kind of errors.</span>
<span class="comment-copy">A leading zero causes a number to be interpreted as octal for <code>2.x</code>, For <code>3.x</code>, its just a error.. right?</span>
<span class="comment-copy">@AerofoilKite Yes, that is correct.</span>
